# epstein-transcript-explorer

./: .env.example  .gitignore  README.md  generate_summary.py  main.py  modal_app.py  pyproject.toml  server.py  speaker_map.py
data/: detailed_summary.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/: types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/ask/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/transcript/: page.tsx
frontend/src/components/: AudioPlayer.tsx  Nav.tsx  SpeakerBadge.tsx  TranscriptProvider.tsx
frontend/src/lib/: api.ts  format.ts  speakers.ts
